huge updates + seo

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.16",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.9.1",
     "gsap": "^3.11.5",
+    "isomorphic-unfetch": "^4.0.2",
     "jquery": "^3.6.4",
     "next": "^13.2.4",
     "react": "^18.2.0",
