--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@heroicons/react": "^2.0.16",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "framer-motion": "^10.9.1",
     "gsap": "^3.11.5",
     "jquery": "^3.6.4",
