--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
